--- a/Responsive web design/Technical-documentation-page/index.html
+++ b/Responsive web design/Technical-documentation-page/index.html
@@ -14,51 +14,53 @@
 
 <body>
     <main id="main-doc">
-        <section id="menu">
-            <h2>JS Documentation</h2>
-            <div><a href="#Introduction">
-                    Introduction
+        <nav id="navbar">
+            <header>
+                <h2>JS Documentation</h2>
+            </header>
+            <div><a class="nav-link" href="#Introduction">
+                Introduction
                 </a></div>
-            <div><a href="#What_you_should_already_know">
-                    What you should already know
+            <div><a class="nav-link" href="#What_you_should_already_know">
+                What you should already know
+            </a></div>
+            <div><a class="nav-link" href="#JavaScript_and_Java">
+                JavaScript and Java
+            </a></div>
+            <div><a class="nav-link" href="#Hello_world">
+                Hello world
+            </a></div>
+            <div><a class="nav-link" href="#Variables">
+                Variables
                 </a></div>
-            <div><a href="#JS_Jv">
-                    JavaScript and Java
+            <div><a class="nav-link" href="#Declaring_variables">
+                Declaring variables
                 </a></div>
-            <div><a href="#Hello_world">
-                    Hello word
+            <div><a class="nav-link" href="#Variable_scope">
+                Variable scope
                 </a></div>
-            <div><a href="#Variables">
-                    Variables
+            <div><a class="nav-link" href="#Global_variables">
+                Global variables
                 </a></div>
-            <div><a href="#Declaring_variables">
-                    Declaring variables
+            <div><a class="nav-link" href="#Constants">
+                Constants
                 </a></div>
-            <div><a href="#Variable_scope">
-                    Variable scope
+            <div><a class="nav-link" href="#Data_types">
+                Data types
                 </a></div>
-            <div><a href="#Global_variables">
-                    Global variables
+            <div><a class="nav-link" href="#if...else_statement">
+                if...else statement
                 </a></div>
-            <div><a href="#Constants">
-                    Constants
+            <div><a class="nav-link" href="#while_statement">
+                while statement
                 </a></div>
-            <div><a href="#Data_types">
-                    Data types
+            <div><a class="nav-link" href="#Function_declarations">
+                Function declarations
                 </a></div>
-            <div><a href="#if_else">
-                    if...else statement
+            <div><a class="nav-link" href="#Reference">
+                Reference
                 </a></div>
-            <div><a href="#while_statement">
-                    while statement
-                </a></div>
-            <div><a href="#Function_declarations">
-                    Function declarations
-                </a></div>
-            <div><a href="#Reference">
-                    Reference
-                </a></div>
-        </section>
+            </nav>
         <section id="ghost"></section>
         <section id="documentation">
             <section id="Introduction" class="main-section">
@@ -95,7 +97,7 @@
                     </ul>
                 </p>
             </section>
-            <section id="JS_Jv" class="main-section">
+            <section id="JavaScript_and_Java" class="main-section">
                 <header>
                     <h1>JavaScript and Java</h1>
                 </header>
@@ -116,10 +118,12 @@
                     <h1>Hello world</h1>
                 </header>
                 <p> To get started with writing JavaScript, open the Scratchpad and write your first "Hello world" JavaScript code: </p>
-                <div class="callout">
-                    <p>function greetMe(yourName) { alert("Hello " + yourName); }</p>
-                    <p>greetMe("World");</p>
-                </div>
+                <code>
+                    <div class="callout">
+                        <p>function greetMe(yourName) { alert("Hello " + yourName); }</p>
+                        <p>greetMe("World");</p>
+                    </div>
+                </code>
                 <p>Select the code in the pad and hit Ctrl+R to watch it unfold in your browser!</p>
             </section>
             <section id="Variables" class="main-section">
@@ -136,19 +140,24 @@
                 </header>
                 <p> You can declare a variable in three ways: </p>
                 <p> With the keyword var. For example, </p>
-                <div class="callout">
-                    <p>var x = 42.</p>
-                </div>
+                <code>
+                    <div class="callout">
+                        <p>var x = 42.</p>
+                    </div>
+                </code>
                 <p> This syntax can be used to declare both local and global variables. </p>
                 <p> By simply assigning it a value. For example, </p>
-                <div class="callout">
-                    <p>x = 42.</p>
-                </div>
+                <code>
+                    <div class="callout">
+                        <p>x = 42.</p>
+                    </div>
+                </code>
                 <p> This always declares a global variable. It generates a strict JavaScript warning. You shouldn't use this variant. </p>
-                <p></p>
-                <div class="callout">
-                    let y = 13.
-                </div>
+                <code>
+                    <div class="callout">
+                        <p>let y = 13.</p>
+                    </div>
+                </code>
                 <p> This syntax can be used to declare a block scope local variable. See Variable scope below. </p>
             </section>
             <section id="Variable_scope" class="main-section">
@@ -157,15 +166,18 @@
                 </header>
                 <p> When you declare a variable outside of any function, it is called a global variable, because it is available to any other code in the current document. When you declare a variable within a function, it is called a local variable, because it is available only within that function. </p>
                 <p> JavaScript before ECMAScript 2015 does not have block statement scope; rather, a variable declared within a block is local to the function (or global scope) that the block resides within. For example the following code will log 5, because the scope of x is the function (or global context) within which x is declared, not the block, which in this case is an if statement. </p>
-                
-                <div class="callout">
-                    <p>if (true) { var x = 5; } console.log(x); // 5</p>
-                </div>
+                <code>
+                    <div class="callout">
+                        <p>if (true) { var x = 5; } console.log(x); // 5</p>
+                    </div>
+                </code>
                 <p> This behavior changes, when using the let declaration introduced in ECMAScript 2015. </p>
-                <div class="callout">
-                    <p>if (true) { let y = 5; } console.log(y); // ReferenceError: y is
-                    not defined</p>
-                </div>
+                <code>
+                    <div class="callout">
+                        <p>if (true) { let y = 5; } console.log(y); // ReferenceError: y is
+                        not defined</p>
+                    </div>
+                </code>
             </section>
             <section id="Global_variables" class="main-section">
                 <header>
@@ -179,22 +191,28 @@
                     <h1>Constants</h1>
                 </header>
                 <p> You can create a read-only, named constant with the const keyword. The syntax of a constant identifier is the same as for a variable identifier: it must start with a letter, underscore or dollar sign and can contain alphabetic, numeric, or underscore characters. </p>
-                <div class="callout">
-                    <p>const PI = 3.14;</p>
-                </div>
+                <code>
+                    <div class="callout">
+                        <p>const PI = 3.14;</p>
+                    </div>
+                </code>
                 <p> A constant cannot change value through assignment or be re-declared while the script is running. It has to be initialized to a value. </p>
                 <p> The scope rules for constants are the same as those for let block scope variables. If the const keyword is omitted, the identifier is assumed to represent a variable. </p>
                 <p> You cannot declare a constant with the same name as a function or variable in the same scope. For example: </p>
-                <div class="callout">
-                    <p>// THIS WILL CAUSE AN ERROR function f() {}; const f = 5; // THIS</p>
-                    <p>WILL CAUSE AN ERROR ALSO function f() { const g = 5; var g;</p>
-                    <p>//statements }</p>
-                </div>
+                <code>
+                    <div class="callout">
+                        <p>// THIS WILL CAUSE AN ERROR function f() {}; const f = 5; // THIS</p>
+                        <p>WILL CAUSE AN ERROR ALSO function f() { const g = 5; var g;</p>
+                        <p>//statements }</p>
+                    </div>
+                </code>
                 <p> However, object attributes are not protected, so the following statement is executed without problems. </p>
-                <div class="callout">
-                    <p>const MY_OBJECT = {"key": "value"}; MY_OBJECT.key =</p>
-                    <p>"otherValue";</p>
-                </div>
+                <code>
+                    <div class="callout">
+                        <p>const MY_OBJECT = {"key": "value"}; MY_OBJECT.key =</p>
+                        <p>"otherValue";</p>
+                    </div>
+                </code>
             </section>
             <section id="Data_types" class="main-section">
                 <header>
@@ -215,55 +233,69 @@
                 </ul>
                 <p>Although these data types are a relatively small amount, they enable you to perform useful functions with your applications. Objects and functions are the other fundamental elements in the language. You can think of objects as named containers for values, and functions as procedures that your application can perform. </p>
             </section>
-            <section id="if_else" class="main-section">
+            <section id="if...else_statement" class="main-section">
                 <header>
                     <h1>if...else statement</h1>
                 </header>
                 <p> Use the if statement to execute a statement if a logical condition is true. Use the optional else clause to execute a statement if the condition is false. An if statement looks as follows: <p>
-                <div class="callout">
-                    <p>if (condition) { statement_1; } else { statement_2; }</p>
-                </div>
+                <code>
+                    <div class="callout">
+                        <p>if (condition) { statement_1; } else { statement_2; }</p>
+                    </div>
+                </code>
                 <p> condition can be any expression that evaluates to true or false. See Boolean for an explanation of what evaluates to true and false. If condition evaluates to true, statement_1 is executed; otherwise, statement_2 is executed. statement_1 and statement_2 can be any statement, including further nested if statements. </p>
                 <p>
                     You may also compound the statements using else if to have multiple conditions tested in sequence, as follows: 
                 </p>
-                <div class="callout">
-                    <p>if (condition_1) { statement_1; } else if (condition_2) {</p>
-                    <p>statement_2; } else if (condition_n) { statement_n; } else {</p>
-                    <p>statement_last; }</p>
-                </div>
+                <code>
+                    <div class="callout">
+                        <p>if (condition_1) { statement_1; } else if (condition_2) {</p>
+                        <p>statement_2; } else if (condition_n) { statement_n; } else {</p>
+                        <p>statement_last; }</p>
+                    </div>
+                </code>
                 <p> In the case of multiple conditions only the first logical condition which evaluates to true will be executed. To execute multiple statements, group them within a block statement ({ ... }) . In general, it's good practice to always use block statements, especially when nesting if statements: </p>
-                <div class="callout">
-                    <p>if (condition) { statement_1_runs_if_condition_is_true;</p>
-                    <p>statement_2_runs_if_condition_is_true; } else {</p>
-                    <p>statement_3_runs_if_condition_is_false;</p>
-                    <p>statement_4_runs_if_condition_is_false; }</p>
-                </div>
+                <code>
+                    <div class="callout">
+                        <p>if (condition) { statement_1_runs_if_condition_is_true;</p>
+                        <p>statement_2_runs_if_condition_is_true; } else {</p>
+                        <p>statement_3_runs_if_condition_is_false;</p>
+                        <p>statement_4_runs_if_condition_is_false; }</p>
+                    </div>
+                </code>
                 <p> It is advisable to not use simple assignments in a conditional expression, because the assignment can be confused with equality when glancing over the code. For example, do not use the following code: </p>
-                <div class="callout">
-                    <p>if (x = y) { /* statements here */ }</p>
-                </div>
+                <code>
+                    <div class="callout">
+                        <p>if (x = y) { /* statements here */ }</p>
+                    </div>
+                </code>
                 <p> If you need to use an assignment in a conditional expression, a common practice is to put additional parentheses around the assignment. For example: </p>
-                <div class="callout">
-                    <p>if ((x = y)) { /* statements here */ }</p>
-                </div>
+                <code>
+                    <div class="callout">
+                        <p>if ((x = y)) { /* statements here */ }</p>
+                    </div>
+                </code>
             </section>
             <section id="while_statement" class="main-section">
                 <header>
                     <h1>while statement</h1>
                 </header>
                 <p> A while statement executes its statements as long as a specified condition evaluates to true. A while statement looks as follows: </p>
-                <div class="callout">
-                    <p>while (condition) statement</p>
-                </div>
+                <code>
+                    <div class="callout">
+                        <p>while (condition) statement</p>
+                    </div>
+                </code>
                 <p> If the condition becomes false, statement within the loop stops executing and control passes to the statement following the loop. </p>￼
                 <p> The condition test occurs before statement in the loop is executed. If the condition returns true, statement is executed and the condition is tested again. If the condition returns false, execution stops and control is passed to the statement following while. </p>
                 <p> To execute multiple statements, use a block statement ({ ... }) to group those statements. </p>
                 <p> Example: </p>
                 <p> The following while loop iterates as long as n is less than three: </p>
-                <div class="callout">
-                    <p>var n = 0; var x = 0; while (n < 3) { n++; x += n; }</p>
-                </div>
+                <code>
+                    <div class="callout">
+                        <p>var n = 0; var x = 0; while (n < 3) { n++; x += n; }</p>
+                    </div>
+                </code>
                 <p> With each iteration, the loop increments n and adds that value to x. Therefore, x and n take on the following values: </p>
                 <ul>
                     <li>After the first pass: n = 1 and x = 1</li>
@@ -283,13 +315,17 @@
                     <li> The JavaScript statements that define the function, enclosed in curly brackets, { }. </li>
                 </ul>
                 <p> For example, the following code defines a simple function named square: </p>
-                <div class="callout">
-                    <p>function square(number) { return number * number; }</p>
-                </div>
+                <code>
+                    <div class="callout">
+                        <p>function square(number) { return number * number; }</p>
+                    </div>
+                </code>
                 <p> The function square takes one argument, called number. The function consists of one statement that says to return the argument of the function (that is, number) multiplied by itself. The return statement specifies the value returned by the function. </p>
-                <div class="callout">
-                    <p>return number * number;</p>
-                </div>
+                <code>
+                    <div class="callout">
+                        <p>return number * number;</p>
+                    </div>
+                </code>
                 <p> Primitive parameters (such as a number) are passed to functions by value; the value is passed to the function, but if the function changes the value of the parameter, this change is not reflected globally or in the calling function. </p>
             </section>
             <section id="Reference"class="main-section">
@@ -302,7 +338,6 @@
                 
                 </p>
             </section>
-
         </section>
     </main>
 </body>
